Edited Image Location

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         style="margin: 0;padding: 0;border-spacing: 0;width: 480px;padding-bottom: 0px;line-height: 0;">
                         <tr>
                             <td style="vertical-align: top;padding: 0;">
-                                <img src="/Pizza-Email/img/header.png" alt="POMINOX Pizza" title="POMINOX Pizza"
+                                <img src="https://i.postimg.cc/ncfrVXQS/header.png" alt="POMINOX Pizza" title="POMINOX Pizza"
                                     style="border: 0;">
                             </td>
                         </tr>
@@ -61,7 +61,7 @@
                     <table width="480" style="background-color: #ffffff;border-spacing: 0;">
                         <tr>
                             <td align="center" style="padding: 0;">
-                                <img src="/Pizza-Email/img/sward.png" alt="POMINOX Pizza Sward Image"
+                                <img src="https://i.postimg.cc/0y8Nmhnp/sward.png" alt="POMINOX Pizza Sward Image"
                                     title="POMINOX Pizza" style="border: 0;">
                             </td>
                         </tr>
@@ -101,7 +101,7 @@
                                 <table width="200" align="left" style="margin: 0;padding: 0;border-spacing: 0;">
                                     <tr>
                                         <td style="padding: 0;">
-                                            <img src="/Pizza-Email/img/pizza1.png" alt="POMINOX PIZZA"
+                                            <img src="https://i.postimg.cc/J43nsRNr/pizza1.png" alt="POMINOX PIZZA"
                                                 title="POMINOX PIZZA" style="border: 0;">
                                         </td>
                                     </tr>
@@ -147,7 +147,7 @@
                                 <table width="190" style="margin: 0;padding: 0;border-spacing: 0;">
                                     <tr>
                                         <td style="padding: 0;">
-                                            <img src="/Pizza-Email/img/pizza2.png" alt="POMINOX PIZZA"
+                                            <img src="https://i.postimg.cc/VkDkF4Z2/pizza2.png" alt="POMINOX PIZZA"
                                                 title="POMINOX PIZZA" style="border: 0;">
                                         </td>
                                     </tr>
@@ -160,7 +160,7 @@
                         style="margin: 0;margin-top: -4px;padding: 0;border-spacing: 0;width: 480px;padding-bottom: 0px;line-height: 0;">
                         <tr>
                             <td style="vertical-align: top;padding: 0;">
-                                <img src="/Pizza-Email/img/footer.png" alt="POMINOX Pizza" title="POMINOX Pizza"
+                                <img src="https://i.postimg.cc/fW9khck0/footer.png" alt="POMINOX Pizza" title="POMINOX Pizza"
                                     style="border: 0;">
                             </td>
                         </tr>
